// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render correctly 1`] = `
"<label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Switch should render correctly with an icon 1`] = `
"<label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"><svg class=\\"\\"></svg></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Switch should render correctly with an iconOff 1`] = `
"<label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"><svg class=\\"\\"></svg></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Switch should render correctly with an iconOn 1`] = `
"<label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"><svg class=\\"\\"></svg></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Switch should render correctly with both icons on/off 1`] = `
"<label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"><svg class=\\"\\"></svg></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Switch should work with different colors 1`] = `
"<div><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #7928ca;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #17c964;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #f5a623;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #f21361;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label></div>"
`;

exports[`Switch should work with different sizes 1`] = `
"<div><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 32px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 18px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 32px;
          height: 18px;
          border-radius: 18px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(18px * 0.7);
          height: calc(18px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 18px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(18px * 0.44);
          width: calc(18px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(32px - 18px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 40px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 20px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 40px;
          height: 20px;
          border-radius: 20px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(20px * 0.7);
          height: calc(20px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 20px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(20px * 0.44);
          width: calc(20px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(40px - 20px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 45px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 24px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 45px;
          height: 24px;
          border-radius: 24px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(24px * 0.7);
          height: calc(24px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 24px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(24px * 0.44);
          width: calc(24px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(45px - 24px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 52px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 28px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 52px;
          height: 28px;
          border-radius: 28px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(28px * 0.7);
          height: calc(28px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 28px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(28px * 0.44);
          width: calc(28px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(52px - 28px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-switch-container\\" data-state=\\"unchecked\\"><input tabindex=\\"-1\\" type=\\"checkbox\\" class=\\"nextui-switch-input\\" data-state=\\"unchecked\\"><div role=\\"switch\\" tabindex=\\"0\\" aria-checked=\\"false\\" aria-disabled=\\"false\\" class=\\"nextui-switch mock\\"><span class=\\"nextui-switch-circle\\"></span></div><style>
        .nextui-switch-container {
          -webkit-tap-highlight-color: transparent;
          display: inline-block;
          vertical-align: center;
          white-space: nowrap;
          user-select: none;
          max-width: 62px;
          transition: all 0.25s ease;
          padding: 3px 0;
          position: relative;
          cursor: pointer;
          ;
        }
        .nextui-switch-input {
          opacity: 0;
          width: 100%;
          height: 32px;
          position: absolute;
          background: transparent;
          z-index: -1;
        }
        .nextui-switch {
          width: 62px;
          height: 32px;
          border-radius: 32px;
          opacity: 1;
          transition: all 0.25s ease;
          position: relative;
          border: 2px solid
            transparent;
          background: rgba(153, 153,153,0.4);
          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          padding: 0;
        }
        .nextui-switch-circle {
          position: absolute;
          display: flex;
          width: calc(32px * 0.7);
          height: calc(32px * 0.7);
          justify-content: center;
          align-items: center;
          top: 50%;
          bottom: 0px;
          transform: translateY(-50%);
          left: calc(2px + 32px * 0.02);
          transition: left 0.25s ease;
          border-radius: 50%;
          background: #fff;
        }
        .nextui-switch.nextui-switch-checked:hover {
          opacity: 0.8;
        }
        .nextui-switch:hover:not(.nextui-switch-checked) {
          opacity: 0.8;
        }
        .nextui-switch-disabled {
          border-color: #999;
          background-color: #999;
        }
        .nextui-switch-checked {
          border: 1px solid transparent;
          background: #0070f3;
        }
        .nextui-switch-circle :global(svg) {
          background: transparent;
          height: calc(32px * 0.44);
          width: calc(32px * 0.44);
        }
        .nextui-switch-checked > .nextui-switch-circle {
          left: calc(62px - 32px * 0.88);
          background: rgba(255, 255,255,0.6);
        }
        .nextui-switch-disabled > .nextui-switch-circle {
          background: #eaeaea;
        }
      </style></label></div>"
`;
